syntax = "proto3";


option go_package = "proto/";

package proto;

service AuthService {
// Register a new user
rpc Register (RegisterRequest) returns (RegisterResponse);

// Login a user
rpc Login (LoginRequest) returns (LoginResponse);

// Get the profile of the logged-in user
rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
}

message RegisterRequest {
  string firstname = 1;
  string lastname = 2;
  string username = 3;
  string password = 4;
  string type = 5;
}

message RegisterResponse {
string message = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool status = 1;
  string token = 2;
}

message GetProfileRequest {
  string userid = 1;
}

message GetProfileResponse {
  string userid = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  string type = 5;
}

